--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "mongoose": "^6.3.0",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-calendar": "^3.7.0",
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "8.13.0",
