--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "mongoose": "^6.3.0",
     "next": "12.1.5",
     "react": "18.0.0",
