--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.3.0",
     "next": "12.1.5",
+    "next-connect": "^0.12.2",
     "react": "18.0.0",
     "react-calendar": "^3.7.0",
     "react-dom": "18.0.0",
